# jing-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  test_agent.py  vercel.json
.github/workflows/: ci.yml  deploy.yml  keep-awake.yml
api/: index.py
deploy/: alibaba_cloud_integration.py  alibaba_cloud_proof.md  alibaba_cloud_setup.md  fc_config.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  AppPage.tsx  index.css  types.ts
frontend/src/components/: ArtisanNotification.tsx  BudgetPreview.tsx  BudgetView.tsx  ClientSignView.tsx  DigitalSignature.tsx  FinancialChart.tsx  FinancialSummaryView.tsx  Header.tsx  Hero.tsx  InsightsPanel.tsx  MermaidChart.tsx  ResultsView.tsx  (+5 more)
jing/: __init__.py
scripts/: benchmark.py  deploy.sh  start.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  eye.py  foreman.py  kit.py  master.py  referee.py  scribe.py  steward.py  voice.py
src/api/: __init__.py  main.py
src/core/: __init__.py  orchestrator.py
src/models/: __init__.py  eye_result.py  kit_result.py  plan.py  request.py  response.py  scribe_result.py
src/prompts/: eye.md  foreman.md  kit.md  master.md  referee.md  scribe.md  steward.md  test.md  voice.md
src/services/: __init__.py  mcp_client.py  mcp_server.py  memory.py  qwen_client.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_agents.py  test_api.py  test_memory.py  test_models.py
(+16 files in other folders)
